<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".TimelineActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/purge"
        android:orderInCategory="100"
        android:title="@string/purge"
        app:showAsAction="never"/>
    <item
        android:id="@+id/postTweet"
        android:orderInCategory="100"
        android:title="@string/postTweet"
        android:icon="@drawable/post_tweet"
        app:showAsAction="always"/>
</menu>
